# ChronoTrade

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  run_all_tests.sh
.github/workflows/: ci.yml
core/: AuthFlags.hpp  Candlestick.hpp  EngineConfig.hpp  Order.hpp  OrderBook.hpp
engine/: BollingerBandsIndicator.hpp  CandlestickGenerator.hpp  IIndicator.hpp  IndicatorRegistry.hpp  LoopProcessor.hpp  MACDIndicator.hpp  RSIIndicator.hpp  SMAIndicator.hpp
feed/: CSVFeedSource.hpp  CSVOrderParser.hpp  FeedInjector.hpp  FeedManager.hpp  FeedTelemetry.hpp  IFeedSource.hpp  OrderParser.hpp  SharedMemoryFeedSource.hpp  SocketFeedSource.hpp  TCPLatencyProxy.cpp  ZeroCopyCsvParser.hpp
feed/simulators/: shm_writer_simulator.cpp
fuzz/: CMakeLists.txt  fuzz_csv_parser.cpp  run_fuzz.sh
infrastructure/: CSVFeedSource.hpp  CSVOrderParser.hpp  FeedInjector.hpp  FeedManager.hpp  Hasher.hpp  OrderParser.hpp  SharedMemoryFeedSource.hpp  SocketFeedSource.hpp  ThreadPool.hpp  picosha2.h
interfaces/: IFeedSource.hpp  IIndicator.hpp
observability/: Observability.hpp
scripts/: run-clang-tidy.sh  run-coverage.sh  run-cppcheck.sh
security/: FeedHashLogger.hpp  SecurityAwareLogger.hpp
tests/: benchmark_simd_sort.cpp  security_macros.hpp  test_arena_allocator.cpp  test_bollinger_indicator.cpp  test_candlestick.cpp  test_candlestick_generator.cpp  test_csv_feedsource.cpp  test_csv_parser.cpp  test_feed_hashlogger.cpp  test_feed_manager.cpp  test_feed_redteam_injection.cpp  test_fixed_window.cpp  test_iindicator_mock.cpp  test_indicator_registry.cpp  test_indicators.cpp  test_loop_processor.cpp  test_macd_indicator.cpp  test_order.cpp  test_order_book.cpp  test_orderbook.cpp  test_orderbook_arena.cpp  test_rsi_indicator.cpp  test_security_macros.cpp  test_shm_feedsource.cpp  test_simd_sort.cpp  test_simd_sort_benchmark.cpp  test_sma_indicator.cpp  test_socket_feedsource.cpp  test_tcp_latency_proxy.cpp  test_zero_copy_csv_parser.cpp
tests/fuzz/: test_zero_copy_csv_parser.cpp
tests/integration/: test_csv_feedsource.cpp  test_feed_manager.cpp  test_shm_feedsource.cpp  test_socket_feedsource.cpp
tests/performance/: benchmark_simd_sort.cpp  test_simd_sort_benchmark.cpp
tests/security/: test_feed_hashlogger.cpp  test_feed_redteam_injection.cpp
tests/unit/: test_arena_allocator.cpp  test_bollinger_indicator.cpp  test_candlestick.cpp  test_candlestick_generator.cpp  test_csv_parser.cpp  test_fixed_window.cpp  test_iindicator_mock.cpp  test_indicator_registry.cpp  test_indicators.cpp  test_loop_processor.cpp  test_macd_indicator.cpp  test_order.cpp  test_orderbook.cpp  test_orderbook_arena.cpp  test_rsi_indicator.cpp  test_simd_sort.cpp  test_sma_indicator.cpp
threads/: ThreadPool.hpp
tools/: TCPLatencyProxy.cpp  shm_writer_simulator.cpp
utils/: ArenaAllocator.hpp  FixedWindow.hpp  Hasher.hpp  Panic.hpp  SimdSort.hpp  SimdSortAVX.hpp  assert.h  logger.h  picosha2.h
